force-app/main/default/objects/Suite_History__c/Suite_History__c.object-meta.xml
<CustomObject>
    <label>Suite History</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>Suite History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suite Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>