force-app/main/default/objects/Suite_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Suite Histories</relationshipLabel>
    <relationshipName>Suite_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>