force-app/main/default/objects/Suite_History__c/fields/Suites__c.field-meta.xml
<CustomField>
    <fullName>Suites__c</fullName>
    <label>Suites</label>
    <referenceTo>Suites__c</referenceTo>
    <relationshipLabel>Suite Histories</relationshipLabel>
    <relationshipName>Suite_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>