force-app/main/default/objects/Suite_History__c/fields/Vacant_New_Value__c.field-meta.xml
<CustomField>
    <fullName>Vacant_New_Value__c</fullName>
    <label>Vacant New Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>