force-app/main/default/objects/Suite_History__c/fields/Vacant_Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Old_Value__c</fullName>
    <label>Vacant Old Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>